compiler/testData/diagnostics/tests/modifiers/primaryConstructorMissingBrackets.kt
// RUN_PIPELINE_TILL: FRONTEND
class A private <!MISSING_CONSTRUCTOR_BRACKETS!>constructor<!><!SYNTAX!><!> {
}

/* GENERATED_FIR_TAGS: classDeclaration, primaryConstructor */
